[gd_scene load_steps=5 format=2]

[ext_resource path="res://models/Hud/HUD.gd" type="Script" id=1]
[ext_resource path="res://fonts/Lobster-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/songs/Menu_music_theme.ogg" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -85.0
margin_right = 175.0
margin_bottom = -3.0
custom_fonts/font = SubResource( 1 )
text = "Garden Wars"

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -150.0
margin_right = 90.0
margin_bottom = -44.0
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]

[node name="HubTheme" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
